# funky-birthdays

./: .gitignore  Dockerfile  build.Dockerfile  cabal-gtk.project  cabal-jsbackend.project  cabal-wasm.project  cabal.project  cabal.project.freeze  default-nix.nix  default.nix  events.ics  funky-birthdays.cabal  package-lock.json  package.json  serverless.yml  shell.nix  stack.yaml
.github/workflows/: haskell-release-dev.yml  haskell-release-nightly.yml  haskell-release-prod.yml  main.yml  nix.yml  nix.yml.disabled
lib/: Constants.hs  Conversion.hs  Data.hs  ICalendar.hs  Map.hs  Ranges.hs  Round.hs  Types.hs  Utils.hs
src/: Api.hs  Main.hs  echoCal.hs  webclient.hs
src/Funk/: Constants.hs  Conversion.hs  Data.hs  ICalendar.hs  Map.hs  Ranges.hs  Round.hs  Types.hs  Utils.hs
