cabal-version:       3.0
-- Newer versions complain
name:                funky-birthdays
version:             0.1.0.0
license:             AGPL-3.0-only
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      lib
  exposed-modules:     Constants
                     , Conversion
                     , Data
                     , ICalendar
                     , Map
                     , Ranges
                     , Round
                     , Types
                     , Utils
  build-depends:       base >=4.15.1 && <5
                     , bytestring
                     , containers
                     , data-default
                     , datetime
                     , iCalendar
                     , numeric-prelude
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, UnicodeSyntax
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -- -Wno-missing-kind-signatures -- only works on recent ghc
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures

executable funky-birthdays
  main-is:             Main.hs
  build-depends:       base >=4.15.1 && <5
                     , bytestring
                     , containers
                     , datetime
                     , funky-birthdays
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, UnicodeSyntax
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -- -Wno-missing-kind-signatures -- only works on recent ghc
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures