cabal-version:      3.0

-- Newer versions complain
name:               funky-birthdays
version:            0.1.0.0
license:            AGPL-3.0-only
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     lib
  exposed-modules:
    Constants
    Conversion
    Data
    ICalendar
    Map
    Ranges
    Round
    Types
    Utils

  build-depends:
    , base             >=4.17.0.0 && <5
    , bytestring
    , containers
    , data-default
    -- , datetime
    , iCalendar        >=0.4.1.1 && <0.5
    , numeric-prelude
    , text
    , time

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -haddock -threaded -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

executable funky-birthdays
  main-is:            Main.hs
  build-depends:
    , base             >=4.17.0.0 && <5
    , bytestring
    , containers
    -- , datetime
    , funky-birthdays
    , time

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
